sandbox/output
FizzBuzz.java:7: error: cannot find symbol
        result = fizzBuzzHandler.handle(number);
                 ^
  symbol:   variable fizzBuzzHandler
  location: class FizzBuzz
1 error
